--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-native-touch-id": "^4.4.1",
     "react-native-transparent-status-and-navigation-bar": "^1.0.3",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation-shared-element": "^5.0.0-alpha1",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "rn-local-authentication": "^1.2.5"
