--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-haptic-feedback": "^2.0.3",
+    "react-native-inkwell": "^0.4.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-bottom-alert": "^1.1.3",
     "react-native-open-notification": "^0.1.4",
