--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-touch-id": "^4.4.1",
     "react-native-transparent-status-and-navigation-bar": "^1.0.3",
     "react-native-vector-icons": "^9.2.0",
