--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-open-notification": "^0.1.4",
     "react-native-paper": "^5.8.0",
     "react-native-pie-chart": "^2.1.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
